--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -18,10 +18,9 @@ jobs:
             - uses: actions/checkout@v2
             - name: Make Sure Release Is Reset To Main
               run: |
-                  git checkout release
-                  git reset --hard main
+                  git checkout -b release
+                  git reset --hard $GITHUB_SHA
                   git push -f # force push the branch
-
             - uses: actions/setup-node@v2
               with:
                   node-version: 17.x
@@ -32,11 +31,16 @@ jobs:
             - name: The Actual Build
               working-directory: frontend-bundler
               run: npm run build
-            - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version.
+            - uses: JamesIves/github-pages-deploy-action@4.1.5
               with:
-                  # Needs --force because frontend-dist is normally .gitignore'd
-                  add: "frontend-dist --force"
                   branch: release
-                  # Arguments for the git pull command. Use NO-PULL to avoid the action pulling at all.
-                  # Default: '--no-rebase'
-                  # pull: 'NO-PULL or --rebase --autostash ...'
+                  folder: frontend-dist
+                  target-folder: frontend-dist
+            # - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version.
+            #   with:
+            #       # Needs --force because frontend-dist is normally .gitignore'd
+            #       add: "frontend-dist --force"
+            #       branch: release
+            #       # Arguments for the git pull command. Use NO-PULL to avoid the action pulling at all.
+            #       # Default: '--no-rebase'
+            #       # pull: 'NO-PULL or --rebase --autostash ...'
