--- a/.github/workflows/Bundle.yml
+++ b/.github/workflows/Bundle.yml
@@ -8,6 +8,7 @@ on:
             - ".github/workflows/Bundle.yml"
         branches:
             - bundled
+            - main
     workflow_dispatch:
 
 jobs:
