--- a/frontend-bundler/.parcelrc
+++ b/frontend-bundler/.parcelrc
@@ -1,4 +1,7 @@
 {
     "extends": "@parcel/config-default",
-    "resolvers": ["parcel-resolver-like-a-browser"]
+    "resolvers": [
+        "parcel-resolver-like-a-browser",
+        "..."
+    ]
 }
