--- a/frontend-bundler/parcel-resolver-like-a-browser/package.json
+++ b/frontend-bundler/parcel-resolver-like-a-browser/package.json
@@ -6,6 +6,9 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "engines": {
+        "parcel": "2.x"
+    },
     "author": "",
     "license": "ISC",
     "dependencies": {
