--- a/frontend-bundler/package.json
+++ b/frontend-bundler/package.json
@@ -1,7 +1,8 @@
 {
     "name": "pluto-frontend-bundler",
     "workspaces": [
-        "parcel-resolver-like-a-browser"
+        "parcel-resolver-like-a-browser",
+        "parcel-transformer-html-string-literal"
     ],
     "version": "1.0.0",
     "description": "",
@@ -16,7 +17,8 @@
         "@parcel/config-default": "^2.0.0",
         "mkdirp": "^1.0.4",
         "parcel": "^2.0.0",
-        "parcel-resolver-like-a-browser": "file:../frontend-bundler/parcel-resolver-like-a-browser"
+        "parcel-resolver-like-a-browser": "file:parcel-resolver-like-a-browser",
+        "parcel-transformer-html-string-literal": "file:parcel-transformer-html-string-literal"
     },
     "devDependencies": {
         "@parcel/optimizer-data-url": "^2.0.0",
